# infopv-opdracht

./: .ghci  .gitignore  GCLparser.cabal  LICENSE  README.md  gcl-verifier.cabal
.devcontainer/: Dockerfile  devcontainer.json
app/: Main.hs  MainOld.hs
bench/: Main.hs
benchresult/divByN/: divN_sTrue_N10.html  divN_sTrue_N2.html  divN_sTrue_N6.html
benchresult/memberOf/: memOf_sFalse_N10.html  memOf_sTrue_N10.html  memOf_sTrue_N2.html  memOf_sTrue_N6.html
benchresult/pullUp/: pullup_sTrue_N10.html  pullup_sTrue_N2.html  pullup_sTrue_N6.html
docs/: aboutInstallingZ3.md  papers.md  syntax.md
examples/: E.gcl  S1.gcl  arrays.gcl  blocks.gcl  min.gcl  minind.gcl  reftest.gcl  reverse.gcl  subs.gcl  swap.gcl  test.gcl
examples/benchmark/: bsort.gcl  divByN.gcl  find12.gcl  invalidBsort.gcl  invalidDivByN.gcl  invalidFind12.gcl  invalidMemberOf.gcl  invalidMin.gcl  invalidPullUp.gcl  memberOf.gcl  min.gcl  pullUp.gcl
examples/benchmark/mutants/bsort/: bsort_M0_ROR_LT_LTE.gcl  bsort_M10_AOR_MINUS_ROTATE.gcl  bsort_M11_AOR_MINUS_PLUS.gcl  bsort_M12_AOR_MINUS_DROP_RIGHT.gcl  bsort_M13_AOR_MINUS_ROTATE.gcl  bsort_M14_AOR_MINUS_PLUS.gcl  bsort_M15_AOR_MINUS_DROP_RIGHT.gcl  bsort_M16_AOR_MINUS_ROTATE.gcl  bsort_M17_AOR_MINUS_PLUS.gcl  bsort_M18_AOR_MINUS_DROP_RIGHT.gcl  bsort_M19_AOR_MINUS_ROTATE.gcl  bsort_M1_ROR_LT_GT.gcl  bsort_M20_AOR_MINUS_PLUS.gcl  bsort_M21_AOR_PLUS_DROP_LEFT.gcl  bsort_M6_ROR_LT_GT.gcl  (+9 more)
examples/examplesHaskellZ3/: TestZ3_from_website.hs  TestZ3_simple.hs  TestZ3_test1.hs  TestZ3_test2.hs  readme.txt
src/: Algebra.hs  GCLInterpreter.hs  GenerateMutantsForBenchMark.hs  Main.hs  MuGCL.hs  Tree.hs  WLP.hs  Z3Utils.hs
src/Engine/: DataTypes.hs  Mermaid.hs  SymbolicExecution.hs  Tree.hs  Verifier.hs  WLP.hs  Z3Utils.hs
src/GCLParser/: GCLDatatype.hs
src/Parser/: Algebra.hs  ExamplesOfSemanticFunction.hs  GCLUtils.hs
src/Parser/GCLLexer/: Lexer.x  Token.hs
src/Parser/GCLParser/: GCLDatatype.hs  Parser.y  PrettyPrint.hs
(+98 files in other folders)
